--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
       </div> -->
     </section> 
     <!-- <section class="team-background section">
-      <!-- <div class="container"> -->
+       <div class="container"> -->
         <!-- Our Team -->
         <!-- <h2 class="our-team">Наша команда</h2>
         <ul class="team-space list">
