--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
   <main>
     <!-- Заголовок -->
-    <!-- <section class="underheader">
+    <section class="underheader">
       <div class="container ">
         <h1 class="heading">Эффективные решения для вашего бизнеса</h1>
             <button type="button" class="head-button" data-modal-open>Заказать услугу</button>
@@ -102,9 +102,9 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section> 
     <!-- Чому ми?  -->
-    <!-- <section class="section">
+    <section class="section">
       <div class="container">
         <h2 class="visually-hidden">Почему мы?</h2>
         <ul class="benefits-list list">
@@ -150,10 +150,10 @@
           </li>
         </ul>
       </div>
-    </section> -->
+    </section>
 
     <!-- Чим ми займаємось -->
-   <!-- <section class="section section-doing">
+   <section class="section section-doing">
       <div class="container">
         <h2 class="doing">Чем мы занимаемся</h2>
         <ul class="doing-container list">
@@ -170,12 +170,12 @@
             <p class="doing-txt">Дизайнерские решения</p>
           </li>
         </ul>
-      </div> -->
+      </div>
     </section> 
-    <!-- <section class="team-background section">
-       <div class="container"> -->
+    <section class="team-background section">
+       <div class="container">
         <!-- Our Team -->
-        <!-- <h2 class="our-team">Наша команда</h2>
+        <h2 class="our-team">Наша команда</h2>
         <ul class="team-space list">
           <li class="team-space__item">
             <img src="./images/igor.jpg" alt="Igor" width="270" />
@@ -313,7 +313,7 @@
             </div>
           </li>
         </ul>
-        </ul> -->
+        </ul>
       </div>
     </section> 
     <section class="clients section">
