--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             </li>
           </ul>
         </nav>
+        
         <ul class="header-list-contacts list">
           <li class="contacts-list__item">
             <a href="mailto:info@devstudio.comlink" class="contacts"><svg class="header-media-icon icon" width="16"
@@ -350,7 +351,7 @@
       </div>
     </section>
   </main>
-  <footer class="footer">
+  <!-- <footer class="footer">
     <div class="container">
       <div><a href="./index.html" class="Web-footer link">Web<span class="studio link">Studio</span></a>
         <address class="address">
@@ -400,7 +401,7 @@
         </form>
       </div>
     </div>
-  </footer>
+  </footer> -->
   <script src="./modal.js"></script>
   <script src="./menu.js"></script>
 </body>
