--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </button>
         
                 <div class="mobile-menu" data-menu>
-        <nav>
+        <nav >
                     <ul class="header-list list">
             <li class="header-list__item">
               <a href="./index.html" class="current-pages pages link">
@@ -47,7 +47,7 @@
         
         <ul class="header-list-contacts list">
           <li class="contacts-list__item">
-            <a href="mailto:info@devstudio.comlink" class="contacts"><svg class="header-media-icon icon" width="16"
+            <a href="mailto:info@devstudio.comlink" class="contacts menu__contacts"><svg class="header-media-icon icon" width="16"
                 height="12">
                 <use href="./images/symbol-defs-contacts.svg#icon-envelope"></use>
               </svg>info@devstudio.com</a>
@@ -59,6 +59,14 @@
               </svg>+38 096 111 11 11</a>
           </li>
         </ul>
+        <div class="menu-socials">
+        <ul class="menu-socials__list list">
+          <li class="menu-socials__item"> <a href="" class="menu-socials__link link">Instagram</a></li>
+          <li class="menu-socials__item"> <a href="" class="menu-socials__link link">Twitter</a></li>
+          <li class="menu-socials__item"> <a href="" class="menu-socials__link link">Facebook</a></li>
+          <li class="menu-socials__item"> <a href="" class="menu-socials__link link">LinkedIn</a></li>
+        </ul>
+</div>
       </div>
     </div>
   </header>
