--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="../css/main.min.css" />
-  <link rel="stylesheet" href="../styles/style.css" />
+  <link rel="stylesheet" href="./css/main.min.css" />
+  <!-- <link rel="stylesheet" href="../styles/style.css" /> -->
 </head>
 
 <body>
@@ -49,13 +49,13 @@
           <li class="contacts-list__item">
             <a href="mailto:info@devstudio.comlink" class="contacts "><svg class="header-media-icon icon" width="16"
                 height="12">
-                <use href="./images/symbol-defs-contacts.svg#icon-envelope"></use>
+                <use href="./images/icons/symbol-defs-contacts.svg#icon-envelope"></use>
               </svg>info@devstudio.com</a>
           </li>
           <li class="contacts-list__item">
-            <a href="tel:+380961111111link" class="contacts menu__contacts" href="./images/symbol-defs.svg#icon-tel">
-              <svg class="header-media-icon icon" width="10" height="16">
-                <use href="./images/symbol-defs-contacts.svg#icon-smartphone"></use>
+            <a href="tel:+380961111111link" class="contacts menu__contacts" >
+              <svg class="header-media-icon icon" width="16" height="16">
+                <use href="./images/icons/symbol-defs.svg#icon-tel"></use>
               </svg>+38 096 111 11 11</a>
           </li>
         </ul>
@@ -81,7 +81,7 @@
           <div class="modal">
             <button type="button" class="cross-button" data-modal-close>
               <svg class="cross-svg">
-                <use href="./images/modal-window.svg#icon-cross"></use>
+                <use href="./images/icons/modal-window.svg#icon-cross"></use>
               </svg>
             </button>
             <p class="modal-txt">Оставьте свои данные, мы вам перезвоним</p>
@@ -111,7 +111,7 @@
               <label class="checkbox-label">
                 <input type="checkbox" class="checkbox " name="checkbox">
                 <span class="modal-icon"> <svg class="agree-icon">
-                    <use href="./images/symbol-defs-modal.svg#icon-agree"></use>
+                    <use href="./images/icons/symbol-defs-modal.svg#icon-agree"></use>
                   </svg></span>
                 Соглашаюсь с рассылкой и принимаю <a href="" class="terms">Условия договора</a>
               </label>
@@ -317,8 +317,8 @@
               <source srcset="./images/michael-mob.jpg 1x, ./images/michael-mob2x.jpg 2x" media="(max-width: 767px)" alt="nikolay">
               <source srcset="./images/michael-tablet.jpg 1x, ./images/michael-tablet2x.jpg 2x" media="(max-width: 1199px)"
                 alt="nikolay">
-              <source srcset="./images/michael.jpg 1x, ./images/michael2x.jpg 2x" media="(min-width: 1200px)" alt="nikolay">
-              <img src="./images/michael.jpg" alt="Igor">
+              <source srcset="./images/michael.jpg 1x, ./images/michael2x.jpg 2x" media="(min-width: 1200px)" alt="michael">
+              <img src="./images/michael.jpg" alt="michael">
             </picture>
             <div class="teamdiv-names">
               <h3 class="team-names">Михаил Ермаков</h3>
