--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="../css/main.min.css">
+  <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
     <!-- Шапка -->
@@ -45,14 +45,14 @@
                     <li class="contacts-list__item">
                         <a href="mailto:info@devstudio.comlink" class="contacts "><svg class="header-media-icon icon"
                                 width="16" height="12">
-                                <use href="./images/symbol-defs-contacts.svg#icon-envelope"></use>
+                                <use href="./images/icons/symbol-defs-contacts.svg#icon-envelope"></use>
                             </svg>info@devstudio.com</a>
                     </li>
                     <li class="contacts-list__item">
                         <a href="tel:+380961111111link" class="contacts menu__contacts"
                             href="./images/symbol-defs.svg#icon-tel">
-                            <svg class="header-media-icon icon" width="10" height="16">
-                                <use href="./images/symbol-defs-contacts.svg#icon-smartphone"></use>
+                            <svg class="header-media-icon icon" width="16" height="16">
+                                <use href="./images/icons/symbol-defs-contacts.svg#icon-smartphone"></use>
                             </svg>+38 096 111 11 11</a>
                     </li>
                 </ul>
