hw8 ya zodovbavsya

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,8 +20,8 @@
             <a href="./index.html" class="header-web__link link">Web<span class="header-web__studio">Studio</span></a>
             <button type="button" class="menu-button " data-menu-button>
                 <svg width="40" height="40" aria-label="Перемикач мобільного меню">
-                    <use class="menu-icon" href="./images/burger.svg#icon-burger"></use>
-                    <use class="cross-icon" href="./images/modal-window.svg#icon-cross"></use>
+                    <use class="menu-icon" href="./images/icons/burger.svg#icon-burger"></use>
+                    <use class="cross-icon" href="./images/icons/modal-window.svg#icon-cross"></use>
                 </svg>
             </button>
     
@@ -49,10 +49,9 @@
                             </svg>info@devstudio.com</a>
                     </li>
                     <li class="contacts-list__item">
-                        <a href="tel:+380961111111link" class="contacts menu__contacts"
-                            href="./images/symbol-defs.svg#icon-tel">
+                        <a href="tel:+380961111111link" class="contacts menu__contacts">
                             <svg class="header-media-icon icon" width="16" height="16">
-                                <use href="./images/icons/symbol-defs-contacts.svg#icon-smartphone"></use>
+                                <use href="./images/icons/symbol-defs.svg#icon-tel"></use>
                             </svg>+38 096 111 11 11</a>
                     </li>
                 </ul>
