--- a/index.html
+++ b/index.html
@@ -89,21 +89,21 @@
               <label for="modal" class="modal-lable">
                 <p class="modal-p">Имя</p>
                 <span class="modal__icon-span"> <svg class="modal-svg">
-                    <use href="./images/symbol-defs-modal.svg#icon-man"></use>
+                    <use href="./images/icons/symbol-defs-modal.svg#icon-man"></use>
                   </svg></span>
                 <input type="text" name="tel" class="modal-input">
               </label>
               <label for="modal" class="modal-lable">
                 <p class="modal-p">Телефон</p>
                 <span class="modal__icon-span"> <svg class="modal-svg">
-                    <use href="./images/symbol-defs-modal.svg#icon-phone"></use>
+                    <use href="./images/icons/symbol-defs-modal.svg#icon-phone"></use>
                   </svg></span>
                 <input type="tel" name="mail" class="modal-input">
               </label>
               <label for="modal" class="modal-lable">
                 <p class="modal-p">Почта</p>
                 <span class="modal__icon-span "> <svg class="modal-svg">
-                    <use href="./images/symbol-defs-modal.svg#icon-email"></use>
+                    <use href="./images/icons/symbol-defs-modal.svg#icon-email"></use>
                   </svg></span>
                 <input type="email" name="modal" class="modal-input">
               </label>
@@ -171,7 +171,7 @@
     </section>
 
     <!-- Чим ми займаємось -->
-    <section class="section section-doing">
+     <section class="section section-doing">
       <div class="container">
         <h2 class="doing">Чем мы занимаемся</h2>
         <ul class="doing-container list">
@@ -314,7 +314,7 @@
           </li>
           <li class="team-space__item">
             <picture>
-              <source srcset="./images/michael-mob.jpg 1x, ./images/michael-mob2x.jpg 2x" media="(max-width: 767px)" alt="nikolay">
+              <source srcset="./images/michael-mob.jpg 1x, ./images/michael-mob2x.jpg 2x" media="(max-width: 767px)" alt="michael">
               <source srcset="./images/michael-tablet.jpg 1x, ./images/michael-tablet2x.jpg 2x" media="(max-width: 1199px)"
                 alt="nikolay">
               <source srcset="./images/michael.jpg 1x, ./images/michael2x.jpg 2x" media="(min-width: 1200px)" alt="michael">
@@ -354,7 +354,7 @@
         </ul>
         </ul>
       </div>
-    </section>
+    </section> 
     <section class="clients section">
       <div class="container">
         <h2 class="our-clients">Постоянные клиенты</h2>
