--- a/index.html
+++ b/index.html
@@ -314,10 +314,10 @@
           </li>
           <li class="team-space__item">
             <picture>
-              <source srcset="./images/michael-mob.jpg 1x, ./images/michael-mob2x.jpg 2x" media="(max-width: 767px)" alt="michael">
-              <source srcset="./images/michael-tablet.jpg 1x, ./images/michael-tablet2x.jpg 2x" media="(max-width: 1199px)"
-                alt="nikolay">
-              <source srcset="./images/michael.jpg 1x, ./images/michael2x.jpg 2x" media="(min-width: 1200px)" alt="michael">
+              <source srcset="./images/Michael-mob.jpg 1x, ./images/Michael-mob2x.jpg 2x" media="(max-width: 767px)" alt="michael">
+              <source srcset="./images/Michael-tablet.jpg 1x, ./images/Michael-tablet2x.jpg 2x" media="(max-width: 1199px)"
+                alt="michael">
+              <source srcset="./images/Michael.jpg 1x, ./images/Michael2x.jpg 2x" media="(min-width: 1200px)" alt="michael">
               <img src="./images/michael.jpg" alt="michael">
             </picture>
             <div class="teamdiv-names">
