--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
           </li>
           <li class="team-space__item">
             <picture>
-              <source srcset="./images/michael-mob.jpg 1x, ./images/michael-mob2x.jpg 2x" media="(max-width: 767px)" alt="michael">
+              <source srcset="./images/michael-mob.jpg 1x, ./images/michael-mob2x.jpg 2x" media="(max-width: 767px)"
               <source srcset="./images/michael-tablet.jpg 1x, ./images/michael-tablet2x.jpg 2x" media="(max-width: 1199px)"
                 alt="michael">
               <source srcset="./images/michael.jpg 1x, ./images/michael2x.jpg 2x" media="(min-width: 1200px)" alt="michael">
